Fix long word content overflow

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -42,6 +42,8 @@ body {
 	line-height: 1.4;
 	color: #ddd;
 	text-align: left;
+	word-wrap: break-word;
+	overflow-wrap: break-word;
 	background-color: #1b1b1b;
 	-webkit-font-smoothing: antialiased;
 }
